eclat-compiler/tests/bad/typing/poly/poly1.ecl
let f g = (g true, g 42);;

let main () =
  () ;;
